--- a/telegram-bot-cloud-run/requirements.txt
+++ b/telegram-bot-cloud-run/requirements.txt
@@ -1,3 +1,5 @@
-flask==2.0.2
+flask==2.3.2
+google-cloud-pubsub==2.17.0
+google-cloud-firestore==2.11.1
 gunicorn==20.1.0
 python-telegram-bot==13.7
