--- a/process-events-cloud-function/requirements.txt
+++ b/process-events-cloud-function/requirements.txt
@@ -1,4 +1,5 @@
 google-cloud-firestore==2.11.1
 google-cloud-functions==1.12.0
+google-cloud-pubsub==2.17.1
 cloudevents==1.9.0
 functions-framework==3.4.0
