--- a/telegram-bot-cloud-run/requirements.txt
+++ b/telegram-bot-cloud-run/requirements.txt
@@ -1,5 +1,7 @@
 flask==2.3.2
-google-cloud-pubsub==2.17.0
 google-cloud-firestore==2.11.1
+google-cloud-pubsub==2.17.0
+google-cloud-secret-manager==2.7.0
 gunicorn==20.1.0
+openai==0.27.5
 python-telegram-bot==13.7
